--- a/Blockudoku/index.html
+++ b/Blockudoku/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blockudoku</title>
+        <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
