added game description

--- a/Blockudoku/index.html
+++ b/Blockudoku/index.html
@@ -28,7 +28,7 @@
                 </div>
                 </div>
                 
-                <canvas id="game-canvas" width="426" height="600"></canvas>
+                <canvas id="game-canvas" width="426" height="550"></canvas>
             </div>
 
             <div id="gameover-container">
@@ -37,6 +37,12 @@
                 <span id="final-score"></span></div>
                 <canvas id="miniature-grid" width="250" height="250"></canvas>
                 <button id="new-game">New Game</button>
+            </div>
+
+            <div id="gameinfo-container">
+                <h2>Play Free Blockudoku Now! </h2>
+                
+                <p>Blockudoku is a simple yet challenging puzzle game that you won't be able to put aside! Match blocks to complete lines and squares to get them removed in this original blend of Sudoku and block puzzle games. Keep the board clean and beat your high score!</p>
             </div>
         </main>
         <script type="module" src="blockudoku.js"></script>
