added best score storage

--- a/Blockudoku/index.html
+++ b/Blockudoku/index.html
@@ -22,7 +22,7 @@
                     <span id="today">Today's best</span>
                     <div id="best-score-container">
                         <img id="trophy-icon" src="./resources/icons/trophy.svg"/>
-                        <span id="best-score">880</span>
+                        <span id="best-score"></span>
                     </div>
                     
                 </div>
