--- a/elCuervo/index.html
+++ b/elCuervo/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>elCuervo</title>
+  <link rel="icon" href="assets/images/icon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/icon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
