--- a/elCuervo/index.html
+++ b/elCuervo/index.html
@@ -36,10 +36,10 @@
   </div>
         <nav id="menu-wrapper">
           <ul id="menu">
-            <li>Despre noi</li>
-            <li>Servicii</li>
-            <li>Surpriza</li>
-            <li>Contact</li>
+            <li><a href="#despre_noi">Despre noi</a></li>
+            <li><a href="#servicii">Servicii</a></li>
+            <li><a href="#blockudoku">Surpriza</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>  
       </header>
