--- a/elCuervo/index.html
+++ b/elCuervo/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- <div class="loader-wrapper">
+  <div class="loader-wrapper">
     <div class="loader">
         <div class="raven-wrapper">
             <div class="raven-container">
@@ -18,7 +18,7 @@
         </div>
         <span class="name">elCuervo</span>
     </div>
-  </div> -->
+  </div>
   <div class="content">
     <section id="acasa">
       <div id="egypt-background">
@@ -157,13 +157,13 @@
           <canvas id="game-canvas" width="426" height="550"></canvas>
       </div>
   
-      <!-- <div id="gameover-container">
+      <div id="gameover-container">
           <div id="gameover-text">
           <span>Game Completed</span>
           <span id="final-score"></span></div>
           <canvas id="miniature-grid" width="250" height="250"></canvas>
           <button id="new-game">New Game</button>
-      </div> -->
+      </div>
       </div>
      
     </section>
