--- a/elCuervo/index.html
+++ b/elCuervo/index.html
@@ -130,7 +130,8 @@
           </div>
         </div> 
       </div>
-      <div id="card-number"> 1 / 3</div>
+      <span id="swipe">Swipe</span>
+      <div id="card-number"> 0 / 3</div>
     </section>
 
 
