--- a/elCuervo/index.html
+++ b/elCuervo/index.html
@@ -48,7 +48,7 @@
         <p class="" id="subtitlu"> Prezenta online memorabila prin <span class="special_s animate">website-uri inovatoare</span></p>
       </div> 
       
-      <div id='scroll-wrapper'>
+      <div class="animate" id='scroll-wrapper'>
         <div id="scroll-container">
           <img id="scroll" src="./assets/svgs/scroll-white.svg">
           <img id="arrow" src ="./assets/images/Arrow 2.png">
@@ -157,7 +157,7 @@
           </div>
           </div>
           
-          <canvas id="game-canvas" width="426" height="550">
+          <canvas id="game-canvas" >
           </canvas>
       </div>
   
